# Auto-Control-Cplus

./: CMakeLists.txt  README.md  points.py  points.txt
ADRC/: LADRC.cpp  LADRC.h  main_adrc.cpp
Data/: kf_data.txt  lpf_data.txt  ols_data.py  pid_data.txt  random_data.txt  smc_data.txt
KF/: demo.cpp  kf.cpp  kf.h  main_kf.cpp
LPF/: lowpass_filter.h  lpf.cpp  lpf.h  main_lpf.cpp
LQR/: main_lqr.cpp
MPC/: MPC.cpp
OLS/: main_ols.cpp  ols.cpp  ols.h
PID/: main_pid.cpp  pid.cpp  pid.h
PLL/: main_pll.cpp
SMC/: main_smc.cpp  smc.cpp  smc.h
Utils/: eigen_demo.cpp  random_data_generate.cpp  time_demo.cpp
